--- a/style.css
+++ b/style.css
@@ -25,3 +25,6 @@
     background-color: palevioletred; /* Cor de fundo ao passar o mouse */
     border-radius: 5px; /* Bordas arredondadas */
 }
+
+
+/* teste */
