--- a/style.css
+++ b/style.css
@@ -1,30 +1,49 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family:"Poppins", sans-serif;
+.oficina {
+    color: white;
+    font-size: 50px;
+    border-bottom: white solid 3px;
+    display: inline-block;
+    padding: 1px;
+    margin-right: 300px;
 }
 
-/* Estilos para a barra de navegação */
+body {
+    font-family: 'Luckiest Guy', cursive;
+}
+
+.col-xlg-12 {
+    background-color: rgb(141, 165, 237);
+
+}
+
+.imagem1 {
+
+    float: right;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .navbar {
-    background-color: pink; /* Cor de fundo */
-    padding: 5px; /* Espaçamento interno */
-    text-align: center; /* Centraliza os itens */
+    background-color: orange;
+    padding: 10px;
+    text-align: center;
 }
 
 .navbar a {
-    text-decoration: none; /* Remove o sublinhado */
-    color: #000; /* Cor do texto */
-    font-size: 18px; /* Tamanho da fonte */
-    padding: 10px 10px; /* Espaçamento em volta dos links */
-    margin: 0 10px; /* Espaçamento lateral entre os links */
-    display: inline-block; /* Faz os links se comportarem como blocos inline */
-    transition: background-color 0.3s ease; /* Transição suave ao passar o mouse */
+    text-decoration: none;
+    color: #000;
+    font-size: 18px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    display: inline-block;
+    transition: background-color 0.3s ease;
 }
 
 .navbar a:hover {
-    background-color: palevioletred; /* Cor de fundo ao passar o mouse */
-    border-radius: 5px; /* Bordas arredondadas */
+    background-color: palevioletred;    /* Cor de fundo ao passar o mouse */
+    
+    border-radius: 5px;
 }
-
-
-/* teste */
