--- a/CSS/style_footer.css
+++ b/CSS/style_footer.css
@@ -2,6 +2,10 @@
     align-items: center;
     text-align: center;
     justify-content: space-between;
+    background-color: #6787E7;
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid #6787E7;
 }
 .contate{
     align-items: center;
