--- a/CSS/style_footer.css
+++ b/CSS/style_footer.css
@@ -6,11 +6,14 @@
     padding: 10px;
     margin: 10px;
     border: 2px solid #6787E7;
+    border-radius: 20px;
 }
 .contate{
     align-items: center;
     text-align: center;
     justify-content: center;
+    background-color: #6787E7;
+    border-radius: 20px;
 }
 .botao_contate{
     background-color: #6787E7;
@@ -18,6 +21,7 @@
     color: white;
     font-family:"Luckiest Guy", sans-serif;
     font-size: 25px;
+    border: 2px solid transparent;
 }
 .direitos{
     align-items: center;
@@ -28,6 +32,16 @@
 .footer{
     background-color: #3E4096;
 }
-a{
+
+
+.btn.rede{
+    background-color: #6787E7;
+    border:1px solid transparent;
     color: white;
+}
+.rede:hover{
+    color: black;
+}
+.botao_contate:hover{
+    color: black;
 }
