--- a/CSS/style_menu.css
+++ b/CSS/style_menu.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:"Luckiest Guy", sans-serif;
+    /* font-family:"Luckiest Guy", sans-serif; */
 }
 
 body{
@@ -11,43 +11,7 @@ body{
 
 /* Estilos para a barra de navegação */
 
-.navbar {
-    background-color: #FFBD57; /* Cor de fundo */
-    padding: 0;
-    margin: 0;
-}
 
-.navbar a {
-    text-decoration: none; /* Remove o sublinhado */
-    color: #000000; /* Cor do texto */
-    font-size: 18px; /* Tamanho da fonte */
-    padding: 10px 20px; /* Espaçamento em volta dos links */
-    margin: 0 10px; /* Espaçamento lateral entre os links */
-    transition: background-color 0.3s ease; /* Transição suave ao passar o mouse */
-}
-
-.navbar li:hover {
-    background-color: #EB6D0B; /* Cor de fundo ao passar o mouse */
-    border-radius: 5px; /* Bordas arredondadas */
-}
-
-.offcanvas{
-    background-color: #FFBD57 !important;
-    
-}
-div .offcanvas-body{
-    padding: 0;
-}
-.offcanvas-header{
-    color: #000000;
-
-}
-a.nav-link{
-    padding-left: 10px;
-
-    /* titulo */
-
-}
 .titulo{
     padding-top: 15px;
     background-color: #6787E7;
@@ -57,6 +21,7 @@ a.nav-link{
     margin-bottom: 20px;
     color: white;
     font-size: 90px;
+    font-family:"Luckiest Guy", sans-serif;
 }
 
 /* subtitulo */
@@ -68,7 +33,8 @@ a.nav-link{
     border-radius: 20px;
     background-color: #3E4096;
     color: white;
-    font-family: "Ubuntu", serif;
+    /* font-family: "Ubuntu", serif; */
+    font-family:"Luckiest Guy", sans-serif;
 }
 
 /* descrição */
@@ -81,7 +47,8 @@ a.nav-link{
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 20px;
-    font-family: 'Ubuntu', sans-serif !important; /* Aplica a fonte Ubuntu apenas a este container */
+    /* font-family: 'Ubuntu', sans-serif !important;  */
+    /* Aplica a fonte Ubuntu apenas a este container */
 }
 
 /* carrosel */
@@ -92,49 +59,3 @@ a.nav-link{
     margin-right: 140px;
 }
 
-/* rodape */
-
-.redes{
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    background-color: #6787E7;
-    border-radius: 20px;
-}
-.contate{
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    background-color: #6787E7;
-    border-radius: 20px;
-}
-.botao_contate{
-    background-color: #6787E7;
-    width: 270px;
-    color: white;
-    font-family:"Luckiest Guy", sans-serif;
-    font-size: 25px;
-    border: 2px solid transparent;
-}
-.direitos{
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    color: white;
-}
-.footer{
-    background-color: #3E4096;
-}
-
-
-.btn.rede{
-    background-color: #6787E7;
-    border:1px solid transparent;
-    color: white;
-}
-.rede:hover{
-    color: black;
-}
-.botao_contate:hover{
-    color: black;
-}
