--- a/CSS/style_footer.css
+++ b/CSS/style_footer.css
@@ -1,12 +1,12 @@
 footer{
-    margin: 20px 20px;
+    /* margin: 20px 20px; */
 }
 
 /* container fluido */
 .rodape{
     padding: 20px 20px;
     background-color: #3E4096;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 
