--- a/CSS/style_navbar.css
+++ b/CSS/style_navbar.css
@@ -7,8 +7,8 @@
 .navbar {
     background-color: #F6CC3A; /* Cor de fundo */
     padding: 0;
-    margin: 20px 20px ;
-    border-radius: 20px;
+    /* margin: 20px 20px ;
+    border-radius: 20px; */
     font-family:"Luckiest Guy", sans-serif;
 
 }
