--- a/CSS/teste_menu.css
+++ b/CSS/teste_menu.css
@@ -1,33 +1,34 @@
 body{
     background-color: #8DA5ED !important;
-  
 }
-
-/* Estilos para a barra de navegação */
-
-section{
-    padding: 20px 20px;
-}
-.titulo{
+.container_cabecalho{
+    width: 90% !important;
     background-color: #6787E7;
-    text-align: center;
-    width: 80% !important;
     border-radius: 20px;
-    color: white;
-    padding: 10px;
-    font-family: "Luckiest Guy";
-    margin-top: 2%;
-}
-.texto-titulo{
-    font-size: 50px;
     padding: 50px;
 }
-.img-titulo{
-    width: 130px;
+.titulo_cabecalho{
+    color: black;
+}
+.h1_cabecalho{
+    font-size: 60px;
+    font-family:"Luckiest Guy", sans-serif;
 }
 
+.h1_cabecalho1{
+    font-size: 40px;
+    font-family:"Luckiest Guy", sans-serif;
+}
+.imagem_cabecalho{
+}
+
+/* .teste{
+    background-color: #F6CC3A;
+} */
+
+
 /* subtitulo */
-.subtitulo{
+.titulo_descricao{
     background-color: #3E4096;
     width: 40% !important;
     border-radius: 20px;
@@ -37,7 +38,7 @@ section{
 
 }
 
-.descricao-subtitulo{
+.texto_descricao{
     background-color: #F6CC3A;
     width: 80% !important;
     padding: 30px;
