--- a/CSS/style_contato.css
+++ b/CSS/style_contato.css
@@ -26,8 +26,11 @@ body{
     border: 1px solid green !important;
 }
 .insta{
-    background-color: rgb(168, 16, 214) !important;
-    border:1px solid rgb(168, 16, 214) !important;
+    background: radial-gradient(circle at 30% 140%, #fdf497 0%, #fdf497 5%, 
+                                #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+    display: flex;
+    align-items: center;
 
 }
 
