--- a/CSS/style_footer.css
+++ b/CSS/style_footer.css
@@ -12,53 +12,53 @@
 
 
 /* container redes */
-.redes{
+.redes_footer{
     align-items: center !important;
     text-align: center !important;
     justify-content: space-between !important;
     border-radius: 20px !important;
 }
 /* icones redes */
-.rede{
+.rede_footer{
     color: white!important;
 }
-.rede:hover{
+.rede_footer:hover{
     color: black!important;
 }
 
 
 
 /* container botao contate */
-.botao_contate{
+.botao_contate_footer{
     background-color: #6787E7 !important;
     font-family:"Luckiest Guy", sans-serif !important;
     border: 1px solid transparent!important;
-    padding: 4px!important;
-    border-radius: 20px!important;
+    border-radius: 15px!important;
     align-items: center!important;
     text-align: center!important;
     justify-content: center!important;
-
-}
-/* tag <a> com o contate*/
-.contate-nos{
     color: white !important;
     text-decoration: none !important;
 }
-.contate-nos:hover{
+/* tag <a> com o contate*/
+a.botao_contate_footer{
+    padding: 14px;
+}
+.botao_contate_footer:hover{
     color: black !important;
 }
 
 
 
 /* container direitos autorais */
-.direitos{
+.direitos_footer{
     text-align: center !important;
     border-radius: 20px!important;
     color: white !important;
     align-items: center!important;
 }
-div.direitos{
+div.direitos_footer{
+    /* arrumar fonte */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
 
 }
