--- a/CSS/style_eventos.css
+++ b/CSS/style_eventos.css
@@ -9,11 +9,15 @@ ul{
     border-radius: 20px;
     padding: 20px;
     margin: 10px;
-    width: 25%;
     justify-content: center !important;
     align-items: center !important;
     text-align: center;
+   
 } 
+
+.row_descricao{
+    background-color: #F6CC3A !important;
+   }
 
 .nav-pills{
     justify-content: center;
@@ -23,11 +27,12 @@ body{
     background-color: #8DA5ED  !important;
 }
 
-.texto{
-    background-color: #F6CC3A;
-    text-align: center;
-    border-radius: 20px;
-    border: 2px solid #EB6D0B;
+
+.img_descricao{
+    max-width: 100%; 
+    max-height: 100%; 
+    height: auto; 
+    width: auto;
 }
 
 .nav-link{
