--- a/telas_ofc/styles/oficinas-2.css
+++ b/telas_ofc/styles/oficinas-2.css
@@ -4,16 +4,19 @@ body{
 
 .titulo_cabecalho{
     font-family:"Luckiest Guy", sans-serif;
-    font-size: 90px;
+    font-size: 5.5rem;
     color: black;
+
 }
-
-
-
 
 .row_descricao{
   background-color: #F6CC3A !important;
+  
  }
+.texto_descricao{
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 1.2rem;
+}
 
 /* carrosel */
 .carousel{
