--- a/CSS/style_menu.css
+++ b/CSS/style_menu.css
@@ -1,18 +1,33 @@
-*{
+* {
     margin: 0;
     padding: 0;
     /* font-family:"Luckiest Guy", sans-serif; */
 }
 
-body{
+#containerzao {
+    background-color: #6787E7;
+    border-radius: 15px;
+    margin: 0 auto; 
+    max-width: 1200px; 
+    padding: 20px;
+}
+
+body {
     background-color: #8DA5ED !important;
-    font-family: 'Luckiest Guy', cursive; /* Aplica a fonte ao corpo do site */
+    background-image: url('Image/home_fundo.PNG');
+    background-size: 100vw 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    font-family: 'Luckiest Guy', cursive;
+    
 }
 
 /* Estilos para a barra de navegação */
 
 
-.titulo{
+.titulo {
     padding-top: 15px;
     background-color: #6787E7;
     text-align: center;
@@ -21,12 +36,12 @@ body{
     margin-bottom: 20px;
     color: white;
     font-size: 90px;
-    font-family:"Luckiest Guy", sans-serif;
+    font-family: "Luckiest Guy", sans-serif;
 }
 
 /* subtitulo */
 
-.row_subtitulo{
+.row_subtitulo {
     text-align: center;
     padding-top: 6px;
     height: 55px;
@@ -34,12 +49,12 @@ body{
     background-color: #3E4096;
     color: white;
     /* font-family: "Ubuntu", serif; */
-    font-family:"Luckiest Guy", sans-serif;
+    font-family: "Luckiest Guy", sans-serif;
 }
 
 /* descrição */
 
-.descricao{
+.descricao {
     background-color: #F6CC3A;
     margin-top: 80px;
     padding-top: 18px;
@@ -47,15 +62,14 @@ body{
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 20px;
-    font-family: 'Ubuntu', sans-serif !important; 
+    font-family: 'Ubuntu', sans-serif !important;
     /* Aplica a fonte Ubuntu apenas a este container */
 }
 
 /* carrosel */
 
-#carouselExampleCaptions{
+#carouselExampleCaptions {
     margin-top: 20px;
     margin-left: 140px;
     margin-right: 140px;
 }
-
