--- a/testes/css_testes/teste_css_menu.css
+++ b/testes/css_testes/teste_css_menu.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url('i');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+}
 .button-container {
     display: flex;
     flex-direction: column;
@@ -33,3 +40,15 @@
     background-color: #0056b3 !important; 
 }
 
+/* Ícones para os botões 
+#startReading i::before {
+    content: "\f130"; 
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+}
+
+#stopReading i::before {
+    content: "\f131"; /* Ícone de microfone com risco (Não funcionou) 
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+}*/
