--- a/telas_ofc/styles/menu-2.css
+++ b/telas_ofc/styles/menu-2.css
@@ -77,43 +77,56 @@ body{
     font-family: 'Ubuntu', sans-serif !important;
 }
 
-/* Ajuste para o carrossel */
-@media (min-width: 576px) {
-    #carouselExampleCaptions {
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
+
+/* carrossel */
+
+
+.carousel-indicators img{
+    width: 70px !important;
+    display: block;
+    border-radius: 5px;
+
+}
+.carousel-indicators button{
+    width: max-content !important;
+
+}
+.carousel-indicators{
+    position: unset;
+    
 }
 
-@media (min-width: 768px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
+.carousel-control-prev{
+    display: inline-block;
+
+}
+.carousel-control-next{
+    display: inline-block;
+
 }
 
-@media (min-width: 992px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
+.carousel-indicators button.active img{
+    border: 2px solid red;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    background-color: black!important;
+    width: 40px;
+    height: 40px;
+}
+.imagem-div {
+    justify-content: center;
+    width: 100%;
+    height: auto;
 }
 
-@media (min-width: 1200px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
+.indicator-img{
+background-color:#8DA5ED  !important;
 }
-
-@media (min-width: 1400px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
+/* Configuração da imagem no carrossel */
+.carousel-item > .imagem-div img {
+    height: auto;
+    object-fit:cover;        /* Corta a imagem centralizando sem distorção */
+    border-radius: 20px;       /* Deixa a imagem redonda */
+    width: 80%;
+    max-height: 600px;
 }
