--- a/telas_ofc/styles/oficinas-2.css
+++ b/telas_ofc/styles/oficinas-2.css
@@ -1,45 +1,105 @@
 body{
-    background-color: #8DA5ED !important;
+  background-color: #8DA5ED !important;
 }
 
 .titulo_cabecalho{
-    font-family:"Luckiest Guy", sans-serif;
-    font-size: 5.5rem;
-    color: black;
+  font-family:"Luckiest Guy", sans-serif;
+  font-size: 5.5rem;
+  color: black;
 
 }
-
 .row_descricao{
-  background-color: #F6CC3A !important;
-  
- }
+background-color: #F6CC3A !important;
+
+}
 .texto_descricao{
-  font-family: 'Ubuntu', sans-serif !important;
-  font-size: 1.2rem;
+font-family: 'Ubuntu', sans-serif !important;
+font-size: 1.2rem;
 }
 
-/* carrosel */
-.carousel{
-    background-color: #FFBD57;
-    height: 500px;
-    border: 40px;
-}
-.carousel-item {
-    display: flex;
-    align-items: center;
+/* cards */
+/* .carousel-inner {
+  padding: 5px!important;
+  } */
+  .card {
+  margin: 0 0.5em!important;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18)!important;
+  border: none!important;
+  background-color: #F6CC3A !important;
+  text-align: center!important;
+  border-radius: 20px!important;
   }
-  .carousel-text{
-    padding-top: 60px;
-    padding-left: 30px;
+  div .card{
+      height: 50rem !important;
   }
-  .carousel-img img {
-    margin: 68px; /* Espaçamento ao redor da imagem */
-    display: block;
-    max-width: 100%;
-    height: 350px;
+  .card-title{
+      font-family:"Luckiest Guy", sans-serif!important;
+      font-size: 2rem!important;
+      color: black!important;
+      margin: 10px!important;
+
   }
-  .carousel-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .card-text{
+      font-family: 'Ubuntu', sans-serif !important;
+      font-size: 1.2rem!important;
+      color: black!important;
+      margin: 20px!important;
+
+  }
+  /* .card-body{
+      align-self: center !important;
+      max-width: 100%; 
+      max-height: 100%; 
+      height: auto; 
+      width: auto;
+  } */
+    .carousel-control-prev,
+    .carousel-control-next {
+    background-color: #3E4096!important;
+    width: 6vh!important;
+    height: 6vh!important;
+    border-radius: 30px!important;
+    top: 50%!important;
+    transform: translateY(-50%)!important;
+    }
+
+
+  /* .carousel-item{
+
+      width: 100% !important;
+  } */
+
+  @media (min-width: 992px) {
+  .carousel-item {
+      margin-right: 0!important;
+      flex: 0 0 33.333333%!important;
+      display: block!important;
+  }
+  .carousel-inner {
+      display: flex!important;
+  }
+  }
+
+  .card .img-wrapper {
+      max-width: 100%!important;
+      height: 20em!important;
+      display: flex!important;
+      justify-content: center!important;
+      align-items: center !important;
+      padding: 10px !important;
+  }
+  .img-wrapper img{
+      border-radius: 10px!important;
+      max-width: 100% !important; 
+      max-height: 100% !important; 
+      height: auto !important; 
+      width: auto !important;       
+  }
+  .card img {
+      max-height: 100% !important;
+  }
+  @media (max-width: 767px) {
+  .card .img-wrapper {
+      height: 17em !important;
+  }
   }
