ajuste tamanho da fonte

--- a/telas_ofc/styles/oficinas-2.css
+++ b/telas_ofc/styles/oficinas-2.css
@@ -4,7 +4,7 @@ body{
 
 .titulo_cabecalho{
   font-family:"Luckiest Guy", sans-serif;
-  font-size: 5.5rem;
+  font-size: 70px;
   color: black;
 
 }
