--- a/telas_ofc/styles/contato-2.css
+++ b/telas_ofc/styles/contato-2.css
@@ -6,21 +6,16 @@
 }
 /* style pagina contato*/
 
-.tel{
-    width: 50%;
-}
-.idade{
-    width: 50%;
-}
-.data{
-    width: 50%;
-}
-.pessoas{
-    width: 50%;
-}
-.formulario{
-    background-color: #6787E7;
-    border-radius: 20px;
+
+
+
+.container-fluid.formulario{
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
+    margin: auto;
 }
 body{
     background-color:#8DA5ED !important ;
