--- a/CSS/style_texto_voz.css
+++ b/CSS/style_texto_voz.css
@@ -26,7 +26,9 @@
 }
 
 .btn i {
-    font-size: 24px; 
+    font-family: 'Font Awesome 6 Free' !important; 
+    font-weight: 900; 
+    font-size: 24px;  
 }
 
 .btn:hover {
